@@ -17,9 +17,11 @@ import com.mallang.mallang_backend.domain.voca.wordbook.service.WordbookService;
 import com.mallang.mallang_backend.domain.voca.wordbookitem.entity.WordbookItem;
 import com.mallang.mallang_backend.domain.voca.wordbookitem.repository.WordbookItemRepository;
 import com.mallang.mallang_backend.global.common.Language;
+import com.mallang.mallang_backend.global.exception.ErrorCode;
 import com.mallang.mallang_backend.global.exception.ServiceException;
 import com.mallang.mallang_backend.global.gpt.service.GptService;
 import com.mallang.mallang_backend.global.util.redis.RedisDistributedLock;
+import com.mallang.mallang_backend.global.validation.WordValidator;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -31,366 +33,409 @@ import java.util.stream.Collectors;
 
 import static com.mallang.mallang_backend.global.constants.AppConstants.DEFAULT_WORDBOOK_NAME;
 import static com.mallang.mallang_backend.global.exception.ErrorCode.*;
-import static com.mallang.mallang_backend.global.gpt.util.GptScriptProcessor.parseGptResult;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class WordbookServiceImpl implements WordbookService {
 
-	private final WordbookRepository wordbookRepository;
-	private final WordRepository wordRepository;
-	private final WordbookItemRepository wordbookItemRepository;
-	private final MemberRepository memberRepository;
-	private final SubtitleRepository subtitleRepository;
-	private final GptService gptService;
-	private final WordQuizResultRepository wordQuizResultRepository;
-	private final RedisDistributedLock redisDistributedLock;
-	private final SavedWordResultFetcher savedWordResultFetcher;
-	private final VideoRepository videoRepository;
+    private final WordbookRepository wordbookRepository;
+    private final WordRepository wordRepository;
+    private final WordbookItemRepository wordbookItemRepository;
+    private final MemberRepository memberRepository;
+    private final SubtitleRepository subtitleRepository;
+    private final GptService gptService;
+    private final WordQuizResultRepository wordQuizResultRepository;
+    private final RedisDistributedLock redisDistributedLock;
+    private final SavedWordResultFetcher savedWordResultFetcher;
+    private final VideoRepository videoRepository;
 
-	// 단어장에 단어 추가
-	@Transactional
-	@Override
-	public void addWords(Long wordbookId, AddWordToWordbookListRequest request, Long memberId) {
-		// 단어장 존재 + 권한 체크
-		Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
-			.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+    // 단어장에 단어 추가
+    @Transactional
+    @Override
+    public void addWords(Long wordbookId, AddWordToWordbookListRequest request, Long memberId) {
+        // 단어장 존재 + 권한 체크
+        Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
+                .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-		for (AddWordToWordbookRequest dto : request.getWords()) {
-			// 저장된 단어가 없는 경우, 사전 API 또는 GPT 처리해서 word 추가 (일반적인 경우엔 단어가 이미 존재함)
-			// TODO: 핵심 단어가 처리 중일 때 Redis Key 기반 락으로 건너뛰는 처리 필요
-			saveWordIfNotExist(dto.getWord());
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-			// 단어가 단어장에 저장되어 있지 않을 때만 저장
-			if (wordbookItemRepository.findByWordbookIdAndWord(wordbook.getId(), dto.getWord()).isEmpty()) {
+        // 추가 단어장 사용 권한이 없으면 추가 단어장에 단어 추가 실패
+        if (!member.canUseAdditaional() && Wordbook.isDefault(wordbook)) {
+            throw new ServiceException(NO_PERMISSION);
+        }
 
-				// WordbookItem 생성 및 저장
-				WordbookItem item = WordbookItem.builder()
-					.wordbook(wordbook)
-					.word(dto.getWord())
-					.subtitleId(dto.getSubtitleId())
-					.videoId(dto.getVideoId())
-					.build();
+        // 단어가 사용자의 설정 언어와 일치하는지 검사
+        boolean hasMismatch = request.getWords().stream()
+                .map(w -> w.getWord())
+                .anyMatch(word -> !WordValidator.isLanguageMatch(word, member.getLanguage()));
+        if (hasMismatch) {
+            throw new ServiceException(LANGUAGE_MISMATCH);
+        }
 
-				wordbookItemRepository.save(item);
-			}
-		}
-	}
+        for (AddWordToWordbookRequest dto : request.getWords()) {
+            // 저장된 단어가 없는 경우, 사전 API 또는 GPT 처리해서 word 추가 (일반적인 경우엔 단어가 이미 존재함)
+            saveWordIfNotExist(dto.getWord());
 
-	// 단어장에 커스텀 단어 추가
-	@Transactional
-	@Override
-	public void addWordCustom(Long wordbookId, AddWordRequest request, Long memberId) {
-		// 단어장 존재 + 권한 체크
-		Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
-			.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+            // 단어가 단어장에 저장되어 있지 않을 때만 저장
+            if (wordbookItemRepository.findByWordbookIdAndWord(wordbook.getId(), dto.getWord()).isEmpty()) {
 
-		String word = request.getWord();
+                // WordbookItem 생성 및 저장
+                WordbookItem item = WordbookItem.builder()
+                        .wordbook(wordbook)
+                        .word(dto.getWord())
+                        .subtitleId(dto.getSubtitleId())
+                        .videoId(dto.getVideoId())
+                        .build();
 
-		// 저장된 단어가 없는 경우, 사전 API 또는 GPT 처리해서 word 추가 (일반적인 경우엔 단어가 이미 존재함)
-		// TODO: 핵심 단어가 처리 중일 때 Redis Key 기반 락으로 건너뛰는 처리 필요
-		saveWordIfNotExist(word);
+                wordbookItemRepository.save(item);
+            }
+        }
+    }
 
-		// 단어가 단어장에 저장되어 있지 않을 때만 저장
-		if (wordbookItemRepository.findByWordbookIdAndWord(wordbook.getId(), word).isEmpty()) {
+    // 단어장에 커스텀 단어 추가
+    @Transactional
+    @Override
+    public void addWordCustom(Long wordbookId, AddWordRequest request, Long memberId) {
+        // 단어장 존재 + 권한 체크
+        Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
+                .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-			// WordbookItem 생성 및 저장
-			WordbookItem item = WordbookItem.builder()
-				.wordbook(wordbook)
-				.word(word)
-				.subtitleId(null)
-				.videoId(null)
-				.build();
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-			wordbookItemRepository.save(item);
-		}
-	}
+        // 추가 단어장 사용 권한이 없으면 추가 단어장에 단어 추가 실패
+        if (!Wordbook.isDefault(wordbook) && !member.canUseAdditaional()) {
+            throw new ServiceException(NO_PERMISSION);
+        }
 
-	/**
-	 * 단어가 WordRepository에 저장되어 있지 않으면 GPT 호출로 단어를 검색하고, WordRepository에 저장합니다.
-	 * @param word 저장되어야 하는 단어
-	 */
-	private void saveWordIfNotExist(String word) {
-		List<Word> words = wordRepository.findByWord(word); // DB 조회
-		if (words.isEmpty()) {
-			// 락 획득 시도
-			String lockKey = "lock:word:saved:" + word;
-			String lockValue = UUID.randomUUID().toString();
-			long ttlMillis = Duration.ofMinutes(1).toMillis();
+        String word = request.getWord();
 
-			boolean locked = redisDistributedLock.tryLock(lockKey, lockValue, ttlMillis);
-			if (!locked) {
-				// 락이 사라졌는지 1분간 계속 확인
-				boolean lockAvailable = redisDistributedLock.waitForUnlockThenFetch(lockKey, ttlMillis, 1000L);
-				// 최대 재시도 시간까지 확인했으나 실패함
-				if (!lockAvailable) {
-					throw new ServiceException(SAVED_WORD_CONCURRENCY_TIME_OUT);
-				}
-				// 락이 사라졌으면 다른 작업으로 처리된 결과를 DB에서 찾아서 응답
-				words = savedWordResultFetcher.fetchSavedWordResultAfterWait(word);
-				if (words.isEmpty()) {
-					throw new ServiceException(WORD_PARSE_FAILED);
-				}
-				return;
-			}
+        if (!WordValidator.isLanguageMatch(word, member.getLanguage())) {
+            throw new ServiceException(LANGUAGE_MISMATCH);
+        }
 
-			try {
-				List<Word> generatedWords = gptService.searchWord(word); // DB에 없으면 GPT 호출
-				wordRepository.saveAll(generatedWords);
+        // 저장된 단어가 없는 경우, 사전 API 또는 GPT 처리해서 word 추가 (일반적인 경우엔 단어가 이미 존재함)
+        saveWordIfNotExist(word);
 
-			} finally {
-				redisDistributedLock.unlock(lockKey, lockValue);
-			}
-		}
-	}
+        // 단어가 단어장에 저장되어 있지 않을 때만 저장
+        if (wordbookItemRepository.findByWordbookIdAndWord(wordbook.getId(), word).isEmpty()) {
 
-	// 추가 단어장 생성
-	@Transactional
-	@Override
-	public Long createWordbook(WordbookCreateRequest request, Long memberId) {
-		Member member = memberRepository.findById(memberId)
-			.orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
+            // WordbookItem 생성 및 저장
+            WordbookItem item = WordbookItem.builder()
+                    .wordbook(wordbook)
+                    .word(word)
+                    .subtitleId(null)
+                    .videoId(null)
+                    .build();
 
-		if (member.getLanguage() == Language.NONE) {
-			throw new ServiceException(LANGUAGE_IS_NONE);
-		}
+            wordbookItemRepository.save(item);
+        }
+    }
 
-		if (request.getName().equals(DEFAULT_WORDBOOK_NAME)) {
-			throw new ServiceException(WORDBOOK_CREATE_DEFAULT_FORBIDDEN);
-		}
+    /**
+     * 단어가 WordRepository에 저장되어 있지 않으면 GPT 호출로 단어를 검색하고, WordRepository에 저장합니다.
+     *
+     * @param word 저장되어야 하는 단어
+     */
+    private void saveWordIfNotExist(String word) {
+        List<Word> words = wordRepository.findByWord(word); // DB 조회
+        if (words.isEmpty()) {
+            // 락 획득 시도
+            String lockKey = "lock:word:saved:" + word;
+            String lockValue = UUID.randomUUID().toString();
+            long ttlMillis = Duration.ofMinutes(1).toMillis();
 
-		Wordbook wordbook = Wordbook.builder()
-			.member(member)
-			.name(request.getName())
-			.language(member.getLanguage())
-			.build();
+            boolean locked = redisDistributedLock.tryLock(lockKey, lockValue, ttlMillis);
+            if (!locked) {
+                // 락이 사라졌는지 1분간 계속 확인
+                boolean lockAvailable = redisDistributedLock.waitForUnlockThenFetch(lockKey, ttlMillis, 1000L);
+                // 최대 재시도 시간까지 확인했으나 실패함
+                if (!lockAvailable) {
+                    throw new ServiceException(SAVED_WORD_CONCURRENCY_TIME_OUT);
+                }
+                // 락이 사라졌으면 다른 작업으로 처리된 결과를 DB에서 찾아서 응답
+                words = savedWordResultFetcher.fetchSavedWordResultAfterWait(word);
+                if (words.isEmpty()) {
+                    throw new ServiceException(WORD_PARSE_FAILED);
+                }
+                return;
+            }
 
-		return wordbookRepository.save(wordbook).getId();
-	}
+            try {
+                List<Word> generatedWords = gptService.searchWord(word); // DB에 없으면 GPT 호출
+                wordRepository.saveAll(generatedWords);
 
-	// 추가 단어장 이름 변경
-	@Transactional
-	@Override
-	public void renameWordbook(Long wordbookId, String name, Long memberId) {
-		Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
-			.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+            } finally {
+                redisDistributedLock.unlock(lockKey, lockValue);
+            }
+        }
+    }
 
-		wordbook.updateName(name);
-	}
+    // 추가 단어장 생성
+    @Transactional
+    @Override
+    public Long createWordbook(WordbookCreateRequest request, Long memberId) {
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-	// 추가 단어장 삭제
-	@Transactional
-	@Override
-	public void deleteWordbook(Long wordbookId, Long memberId) {
-		Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
-			.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+        if (member.getLanguage() == Language.NONE) {
+            throw new ServiceException(LANGUAGE_IS_NONE);
+        }
 
-		if (DEFAULT_WORDBOOK_NAME.equals(wordbook.getName())) {
-			throw new ServiceException(WORDBOOK_DELETE_DEFAULT_FORBIDDEN);
-		}
+        if (request.getName().equals(DEFAULT_WORDBOOK_NAME)) {
+            throw new ServiceException(WORDBOOK_CREATE_DEFAULT_FORBIDDEN);
+        }
 
-		// 삭제되는 단어와 관련된 퀴즈 결과 삭제
-		List<WordbookItem> items = wordbookItemRepository.findAllByWordbook(wordbook);
-		for (WordbookItem item : items) {
-			wordQuizResultRepository.deleteAllByWordbookItem(item);
-		}
-		// 추가 단어장 삭제 시 들어있는 단어 아이템들도 삭제
-		wordbookItemRepository.deleteAllByWordbookId(wordbookId);
-		wordbookRepository.delete(wordbook);
-	}
+        Wordbook wordbook = Wordbook.builder()
+                .member(member)
+                .name(request.getName())
+                .language(member.getLanguage())
+                .build();
 
-	// 단어장의 단어 이동
-	@Transactional
-	@Override
-	public void moveWords(WordMoveRequest request, Long memberId) {
-		Long toId = request.getDestinationWordbookId();
+        return wordbookRepository.save(wordbook).getId();
+    }
 
-		Wordbook toWordbook = wordbookRepository.findByIdAndMemberId(toId, memberId)
-			.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+    // 추가 단어장 이름 변경
+    @Transactional
+    @Override
+    public void renameWordbook(Long wordbookId, String name, Long memberId) {
+        Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
+                .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-		for (WordMoveItem item : request.getWords()) {
-			// 같은 단어장으로 이동하려고 하면 통과
-			if (toId.equals(item.getFromWordbookId())) {
-				continue;
-			}
+        wordbook.updateName(name);
+    }
 
-			// 기존 단어장 조회
-			Wordbook fromWordbook = wordbookRepository.findByIdAndMemberId(item.getFromWordbookId(), memberId)
-				.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+    // 추가 단어장 삭제
+    @Transactional
+    @Override
+    public void deleteWordbook(Long wordbookId, Long memberId) {
+        Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
+                .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-			// 기존 WordbookItem 찾기
-			WordbookItem existingItem = wordbookItemRepository.findByWordbookAndWord(fromWordbook, item.getWord())
-				.orElseThrow(() -> new ServiceException(WORDBOOK_ITEM_NOT_FOUND));
+        if (DEFAULT_WORDBOOK_NAME.equals(wordbook.getName())) {
+            throw new ServiceException(WORDBOOK_DELETE_DEFAULT_FORBIDDEN);
+        }
 
-			existingItem.updateWordbook(toWordbook);
-			wordbookItemRepository.save(existingItem);
-		}
-	}
+        // 삭제되는 단어와 관련된 퀴즈 결과 삭제
+        List<WordbookItem> items = wordbookItemRepository.findAllByWordbook(wordbook);
+        for (WordbookItem item : items) {
+            wordQuizResultRepository.deleteAllByWordbookItem(item);
+        }
+        // 추가 단어장 삭제 시 들어있는 단어 아이템들도 삭제
+        wordbookItemRepository.deleteAllByWordbookId(wordbookId);
+        wordbookRepository.delete(wordbook);
+    }
 
-	// 단어장에서 단어 삭제
-	@Transactional
-	@Override
-	public void deleteWords(WordDeleteRequest request, Long memberId) {
-		for (WordDeleteItem item : request.getWords()) {
-			// 단어장 조회 및 권한 체크
-			Wordbook wordbook = wordbookRepository.findByIdAndMemberId(item.getWordbookId(), memberId)
-				.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+    // 단어장의 단어 이동
+    @Transactional
+    @Override
+    public void moveWords(WordMoveRequest request, Long memberId) {
+        Long toId = request.getDestinationWordbookId();
 
-			// WordbookItem 조회
-			WordbookItem itemToDelete = wordbookItemRepository.findByWordbookAndWord(wordbook, item.getWord())
-				.orElseThrow(() -> new ServiceException(WORDBOOK_ITEM_NOT_FOUND));
+        Wordbook toWordbook = wordbookRepository.findByIdAndMemberId(toId, memberId)
+                .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-			// 퀴즈 결과에서 단어와 관련된 퀴즈 결과 삭제
-			wordQuizResultRepository.deleteAllByWordbookItem(itemToDelete);
+        for (WordMoveItem item : request.getWords()) {
+            // 같은 단어장으로 이동하려고 하면 통과
+            if (toId.equals(item.getFromWordbookId())) {
+                continue;
+            }
 
-			// 단어장 단어 삭제
-			wordbookItemRepository.delete(itemToDelete);
-		}
-	}
+            // 기존 단어장 조회
+            Wordbook fromWordbook = wordbookRepository.findByIdAndMemberId(item.getFromWordbookId(), memberId)
+                    .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-	// 단어장에 단어들 조회(랜덤 순서)
-	@Override
-	public List<WordResponse> getWordsRandomly(Long wordbookId, Long memberId) {
-		// 단어장 존재 여부 및 권한 확인
-		Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
-			.orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
+            // 기존 WordbookItem 찾기
+            WordbookItem existingItem = wordbookItemRepository.findByWordbookAndWord(fromWordbook, item.getWord())
+                    .orElseThrow(() -> new ServiceException(WORDBOOK_ITEM_NOT_FOUND));
 
-		// 단어장 아이템 조회
-		List<WordbookItem> items = wordbookItemRepository.findAllByWordbook(wordbook);
+            existingItem.updateWordbook(toWordbook);
+            wordbookItemRepository.save(existingItem);
+        }
+    }
 
-		// 모든 단어명 추출
-		List<WordResponse> result = convertToWordResponses(items);
-		Collections.shuffle(result);
-		return result;
-	}
+    // 단어장에서 단어 삭제
+    @Transactional
+    @Override
+    public void
+    deleteWords(WordDeleteRequest request, Long memberId) {
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-	// 단어장 조회
-	@Override
-	public List<WordbookResponse> getWordbooks(Long memberId) {
-		Member member = memberRepository.findById(memberId)
-			.orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
+        for (WordDeleteItem item : request.getWords()) {
+            // 단어장 조회 및 권한 체크
+            Wordbook wordbook = wordbookRepository.findByIdAndMemberId(item.getWordbookId(), memberId)
+                    .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-		List<Wordbook> wordbooks = wordbookRepository.findAllByMemberIdAndLanguage(memberId, member.getLanguage());
+            // 추가 단어장 사용 권한이 없으면 추가 단어장의 단어 삭제 불가능
+            if (!Wordbook.isDefault(wordbook) && !member.canUseAdditaional()) {
+                throw new ServiceException(ErrorCode.NO_PERMISSION);
+            }
 
-		return wordbooks.stream()
-			.map(w -> new WordbookResponse(
-				w.getId(),
-				w.getName(),
-				w.getLanguage()
-			)).toList();
-	}
+            // WordbookItem 조회
+            WordbookItem itemToDelete = wordbookItemRepository.findByWordbookAndWord(wordbook, item.getWord())
+                    .orElseThrow(() -> new ServiceException(WORDBOOK_ITEM_NOT_FOUND));
 
-	@Override
-	public List<WordResponse> searchWordFromWordbook(Long memberId, String keyword) {
-		Member member = memberRepository.findById(memberId)
-			.orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
-		List<WordbookItem> items = wordbookItemRepository.findByWordbook_MemberAndWordContaining(member, keyword);
+            // 퀴즈 결과에서 단어와 관련된 퀴즈 결과 삭제
+            wordQuizResultRepository.deleteAllByWordbookItem(itemToDelete);
 
-		return convertToWordResponses(items);
-	}
+            // 단어장 단어 삭제
+            wordbookItemRepository.delete(itemToDelete);
+        }
+    }
 
-	@Override
-	public List<WordResponse> getWordbookItems(Long memberId) {
-		// 사용자 조회
-		Member member = memberRepository.findById(memberId)
-			.orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
+    // 단어장에 단어들 조회(랜덤 순서)
+    @Override
+    public List<WordResponse> getWordsRandomly(Long wordbookId, Long memberId) {
+        // 단어장 존재 여부 및 권한 확인
+        Wordbook wordbook = wordbookRepository.findByIdAndMemberId(wordbookId, memberId)
+                .orElseThrow(() -> new ServiceException(NO_WORDBOOK_EXIST_OR_FORBIDDEN));
 
-		// 사용자의 모든 단어장 조회
-		List<Wordbook> wordbooks = wordbookRepository.findAllByMember(member);
-		if (wordbooks.isEmpty()) {
-			return Collections.emptyList();
-		}
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-		// 모든 wordbookId 추출
-		List<Long> wordbookIds = wordbooks.stream()
-				.map(Wordbook::getId)
-				.toList();
+        // 추가 단어장 사용 권한이 없으면 추가 단어장의 단어 조회 불가능
+        if (!Wordbook.isDefault(wordbook) && !member.canUseAdditaional()) {
+            throw new ServiceException(ErrorCode.NO_PERMISSION);
+        }
 
-		// 모든 WordbookItem 조회
-		List<WordbookItem> items = wordbookItemRepository.findAllByWordbookIdIn(wordbookIds);
+        // 단어장 아이템 조회
+        List<WordbookItem> items = wordbookItemRepository.findAllByWordbook(wordbook);
 
-		return convertToWordResponses(items);
-	}
+        // 모든 단어명 추출
+        List<WordResponse> result = convertToWordResponses(items);
+        Collections.shuffle(result);
+        return result;
+    }
 
-	private List<WordResponse> convertToWordResponses(List<WordbookItem> items) {
-		// 모든 단어명 추출
-		List<String> wordList = items.stream()
-			.map(WordbookItem::getWord)
-			.collect(Collectors.toList());
+    // 단어장 조회
+    @Override
+    public List<WordbookResponse> getWordbooks(Long memberId) {
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-		// Word 테이블에서 일괄 조회 (단어명 중복 허용)
-		List<Word> wordEntities = wordRepository.findByWordIn(wordList);
+        List<Wordbook> wordbooks = wordbookRepository.findAllByMemberIdAndLanguage(memberId, member.getLanguage());
 
-		// 먼저 등장한 단어만 Map에 저장 (중복 제거)
-		Map<String, Word> wordMap = new LinkedHashMap<>();
-		for (Word wordEntity : wordEntities) {
-			wordMap.putIfAbsent(wordEntity.getWord(), wordEntity);
-		}
+        // 추가 단어장 사용 권한이 없으면 기본 단어장만 응답
+        if (!member.canUseAdditaional()) {
+            wordbooks = wordbooks.stream()
+                    .filter(wb -> Wordbook.isDefault(wb))
+                    .toList();
+        }
 
-		// Subtitle 엔티티 조회 (subtitleId가 null이 아닌 경우만)
-		List<Long> subtitleIds = items.stream()
-			.map(WordbookItem::getSubtitleId)
-			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+        return wordbooks.stream()
+                .map(w -> new WordbookResponse(
+                        w.getId(),
+                        w.getName(),
+                        w.getLanguage(),
+                        wordbookItemRepository.countByWordbook(w),
+                        wordbookItemRepository.countByWordbookAndLearnedTrue(w)
+                )).toList();
+    }
 
-		Map<Long, Subtitle> subtitleMap = subtitleIds.isEmpty() ?
-			Collections.emptyMap() :
-			subtitleRepository.findByIdIn(subtitleIds).stream()
-				.collect(Collectors.toMap(Subtitle::getId, Function.identity()));
+    @Override
+    public List<WordResponse> getWordbookItems(Long memberId) {
+        // 사용자 조회
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new ServiceException(MEMBER_NOT_FOUND));
 
-		// Subtitle 엔티티 조회 (subtitleId가 null이 아닌 경우만)
-		List<String> videoIds = items.stream()
-			.map(WordbookItem::getVideoId)
-			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+        // 사용자의 모든 단어장 조회
+        List<Wordbook> wordbooks = wordbookRepository.findAllByMember(member);
+        if (wordbooks.isEmpty()) {
+            return Collections.emptyList();
+        }
 
-		Map<String, Videos> videoMap = videoIds.isEmpty() ?
-			Collections.emptyMap() :
-			videoRepository.findByIdIn(videoIds).stream()
-				.collect(Collectors.toMap(Videos::getId, Function.identity()));
+        // 모든 wordbookId 추출
+        List<Long> wordbookIds = wordbooks.stream()
+                .map(Wordbook::getId)
+                .toList();
 
-		// 응답 생성
-		return items.stream()
-			.map(item -> {
-				Word wordEntity = wordMap.get(item.getWord());
-				if (wordEntity == null) return null;
+        // 모든 WordbookItem 조회
+        List<WordbookItem> items = wordbookItemRepository.findAllByWordbookIdIn(wordbookIds);
 
-				String exampleSentence = wordEntity.getExampleSentence();
-				String translatedSentence = wordEntity.getTranslatedSentence();
+        return convertToWordResponses(items);
+    }
 
-				if (item.getSubtitleId() != null && subtitleMap.containsKey(item.getSubtitleId())) {
-					Subtitle subtitle = subtitleMap.get(item.getSubtitleId());
-					exampleSentence = subtitle.getOriginalSentence();
-					translatedSentence = subtitle.getTranslatedSentence();
-				}
+    private List<WordResponse> convertToWordResponses(List<WordbookItem> items) {
+        // 모든 단어명 추출
+        List<String> wordList = items.stream()
+                .map(WordbookItem::getWord)
+                .collect(Collectors.toList());
 
-				String videoTitle = null;
-				String imageUrl = null;
+        // Word 테이블에서 일괄 조회 (단어명 중복 허용)
+        List<Word> wordEntities = wordRepository.findByWordIn(wordList);
 
-				if (item.getVideoId() != null && videoMap.containsKey(item.getVideoId())) {
-					Videos videos = videoMap.get(item.getVideoId());
-					videoTitle = videos.getVideoTitle();
-					imageUrl = videos.getThumbnailImageUrl();
-				}
+        // 먼저 등장한 단어만 Map에 저장 (중복 제거)
+        Map<String, Word> wordMap = new LinkedHashMap<>();
+        for (Word wordEntity : wordEntities) {
+            wordMap.putIfAbsent(wordEntity.getWord(), wordEntity);
+        }
 
-				return new WordResponse(
-					item.getWord(),
-					wordEntity.getPos(),
-					wordEntity.getMeaning(),
-					wordEntity.getDifficulty().toString(),
-					exampleSentence,
-					translatedSentence,
-					item.getVideoId(),
-					videoTitle,
-					imageUrl,
-					item.getSubtitleId(),
-					item.getCreatedAt(),
-					item.getWordbook().getId()
-				);
-			})
-			.filter(Objects::nonNull)
-			.sorted(Comparator.comparing(WordResponse::getCreatedAt).reversed())
-			.collect(Collectors.toList());
-	}
+        // Subtitle 엔티티 조회 (subtitleId가 null이 아닌 경우만)
+        List<Long> subtitleIds = items.stream()
+                .map(WordbookItem::getSubtitleId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        Map<Long, Subtitle> subtitleMap = subtitleIds.isEmpty() ?
+                Collections.emptyMap() :
+                subtitleRepository.findByIdIn(subtitleIds).stream()
+                        .collect(Collectors.toMap(Subtitle::getId, Function.identity()));
+
+        // Subtitle 엔티티 조회 (subtitleId가 null이 아닌 경우만)
+        List<String> videoIds = items.stream()
+                .map(WordbookItem::getVideoId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        Map<String, Videos> videoMap = videoIds.isEmpty() ?
+                Collections.emptyMap() :
+                videoRepository.findByIdIn(videoIds).stream()
+                        .collect(Collectors.toMap(Videos::getId, Function.identity()));
+
+        // 응답 생성
+        return items.stream()
+                .map(item -> {
+                    Word wordEntity = wordMap.get(item.getWord());
+                    if (wordEntity == null) return null;
+
+                    String exampleSentence = wordEntity.getExampleSentence();
+                    String translatedSentence = wordEntity.getTranslatedSentence();
+
+                    if (item.getSubtitleId() != null && subtitleMap.containsKey(item.getSubtitleId())) {
+                        Subtitle subtitle = subtitleMap.get(item.getSubtitleId());
+                        exampleSentence = subtitle.getOriginalSentence();
+                        translatedSentence = subtitle.getTranslatedSentence();
+                    }
+
+                    String videoTitle = null;
+                    String imageUrl = null;
+
+                    if (item.getVideoId() != null && videoMap.containsKey(item.getVideoId())) {
+                        Videos videos = videoMap.get(item.getVideoId());
+                        videoTitle = videos.getVideoTitle();
+                        imageUrl = videos.getThumbnailImageUrl();
+                    }
+
+                    return new WordResponse(
+                            item.getWord(),
+                            wordEntity.getPos(),
+                            wordEntity.getMeaning(),
+                            wordEntity.getDifficulty().toString(),
+                            exampleSentence,
+                            translatedSentence,
+                            item.getVideoId(),
+                            videoTitle,
+                            imageUrl,
+                            item.getSubtitleId(),
+                            item.getCreatedAt(),
+                            item.getWordbook().getId()
+                    );
+                })
+                .filter(Objects::nonNull)
+                .sorted(Comparator.comparing(WordResponse::getCreatedAt).reversed())
+                .collect(Collectors.toList());
+    }
 }
